--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>shroomsathome</title>
   </head>
-  <body class="h-screen bg-[#19191a]">
+  <body class="h-screen bg-[#19191a] text-slate-300">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
