--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>shrooms @ home</title>
+    <title>mycomize</title>
   </head>
-  <body class="h-screen bg-[#19191a] text-[#f9fbfd]">
+  <body class="h-screen bg-[#19191a] text-[#f9fbfd] sm:text-xl">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
