Begin migration of shromsathome to mycomize

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>mycomize</title>
   </head>
-  <body class="h-screen bg-[#19191a] text-[#f9fbfd] sm:text-xl">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
